--- a/src/main/resources/com/example/apalabradosjavafx/juego.fxml
+++ b/src/main/resources/com/example/apalabradosjavafx/juego.fxml
@@ -346,7 +346,7 @@
             <Font size="25.0" />
          </font>
       </Label>
-      <Label fx:id="palabraFallada" layoutX="1241.0" layoutY="935.0" prefHeight="36.0" prefWidth="442.0" text=" ">
+      <Label fx:id="palabraFallada" alignment="CENTER" contentDisplay="CENTER" layoutX="1241.0" layoutY="935.0" prefHeight="36.0" prefWidth="442.0" style="-fx-text-alignment: center;">
          <font>
             <Font size="25.0" />
          </font>
