--- a/src/main/resources/com/example/apalabradosjavafx/style.css
+++ b/src/main/resources/com/example/apalabradosjavafx/style.css
@@ -46,3 +46,14 @@
     -fx-border-color: #9072e1;
     -fx-background-radius: 10px;
 }
+
+.oscurecerFondo{
+    -fx-background-color: rgba(0, 0, 0, 0.5);
+}
+
+.popUpFinalJuego{
+    -fx-border-radius: 15px;
+    -fx-background-radius: 15px;
+    -fx-border-color: #9072e1;
+    -fx-background-color: white;
+}
